<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">123123123</string>
    <string name="nav_header_subtitle">gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_maps">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_developer">About the developer</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="clear">Clear</string>
    <string name="search">Search</string>
    <string name="message">I am learning android development!</string>
    <string name="button">Good luck!</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="exit">Exit</string>
    <string name="singIn">Sing in</string>
    <string name="flavor" translatable="false">pro</string>
    <!-- Strings used for fragments for navigation -->

</resources>